From Ivan Wong : http://bugzilla.gnome.org/show_bug.cgi?id=159860 Use

2004-12-17  Jody Goldberg <jody@gnome.org>

	From Ivan Wong :
	http://bugzilla.gnome.org/show_bug.cgi?id=159860
	* utils/go-file.c (go_url_show) : Use ShellExecute on win32

2004-11-13  Jody Goldberg <jody@gnome.org>

	* ms-excel-read.c (ms_sheet_realize_obj) : We have a clear separation
	  between create and realize now, we should use it.  This routine sets
	  the content.
	(ms_sheet_create_obj) : this one creates objects for use later.
	  I am not entire happy with this split.  It no longer feels
	  necessary but it is much too close to release to contemplate
	  cleaning it up.


2004-11-14  Jody Goldberg <jody@gnome.org>

	* src/sheet-object-image.c (sheet_object_image_set_image) : renamed
	  from sheet_object_image_new to make the life cycle simpler for
	  importers.
	(soi_get_pixbuf) : No data == no pixbuf
	* src/wbcg-actions.c (cb_insert_image) : adjust to the name and
	  semantic change of sheet_object_image_set_image.